fix nav bar z-index and change start game to play game

--- a/app/assets/stylesheets/games_common.sass
+++ b/app/assets/stylesheets/games_common.sass
@@ -417,6 +417,7 @@
 		background: white
 		box-shadow: 0px 5px 30px -10px rgba(0, 0, 0, 0.5)
 		top: 56px
+		z-index: 100
 		ul
 			list-style: none
 			padding-left: 0
@@ -471,6 +472,7 @@
 			box-shadow: 0 10px 14px 4px rgba(50, 50, 93, 0.2), 0 3px 6px rgba(0, 0, 0, 0.1)
 			border-radius: $borderRadius-wide
 			border: none
+			margin-bottom: 2em
 
 			&.available-game
 				.card-body
