--- a/app/assets/stylesheets/nav.sass
+++ b/app/assets/stylesheets/nav.sass
@@ -8,6 +8,8 @@ nav.navbar
 			width: 150px
 	ul.navbar-nav
 		background-color: $blue
+		li.nav-item .dropdown-menu
+			z-index: 110
 	.page-title
 		position: absolute
 		top: 15px
